--- a/PopWil/resource.qrc
+++ b/PopWil/resource.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/Icon">
+        <file>Icon/controlpanel.png</file>
+        <file>Icon/dashboard.png</file>
         <file>Icon/editcopy.png</file>
         <file>Icon/editcut.png</file>
         <file>Icon/editpaste.png</file>
@@ -10,8 +12,12 @@
         <file>Icon/fileopen.png</file>
         <file>Icon/fileprint.png</file>
         <file>Icon/filesave.png</file>
+        <file>Icon/mainIcon.png</file>
+        <file>Icon/Pasue.png</file>
         <file>Icon/pointer.png</file>
         <file>Icon/save.png</file>
+        <file>Icon/startIcon.png</file>
+        <file>Icon/stopIcon.png</file>
         <file>Icon/textbold.png</file>
         <file>Icon/textcenter.png</file>
         <file>Icon/textitalic.png</file>
@@ -20,5 +26,7 @@
         <file>Icon/textright.png</file>
         <file>Icon/zoomin.png</file>
         <file>Icon/zoomout.png</file>
+        <file>Icon/节点-开始(1).png</file>
+        <file>Icon/节点-开始.png</file>
     </qresource>
 </RCC>
