--- a/PopWil/mainwindow.ui
+++ b/PopWil/mainwindow.ui
@@ -299,7 +299,7 @@ background-color: rgb(153, 204, 255);</string>
       <x>660</x>
       <y>380</y>
       <width>300</width>
-      <height>441</height>
+      <height>331</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -314,7 +314,7 @@ background-color: rgb(153, 204, 255);</string>
        <x>1</x>
        <y>0</y>
        <width>300</width>
-       <height>391</height>
+       <height>331</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -627,53 +627,14 @@ QTabBar::tab:selected{background:#99CCFF;border-color: green;}</string>
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>40</y>
+         <y>10</y>
          <width>281</width>
-         <height>171</height>
+         <height>221</height>
         </rect>
        </property>
        <property name="title">
         <string>地震波</string>
        </property>
-       <widget class="QRadioButton" name="rbt_S">
-        <property name="geometry">
-         <rect>
-          <x>30</x>
-          <y>80</y>
-          <width>89</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>位移</string>
-        </property>
-       </widget>
-       <widget class="QRadioButton" name="rbt_V">
-        <property name="geometry">
-         <rect>
-          <x>30</x>
-          <y>110</y>
-          <width>89</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>速度</string>
-        </property>
-       </widget>
-       <widget class="QRadioButton" name="rbt_A">
-        <property name="geometry">
-         <rect>
-          <x>30</x>
-          <y>140</y>
-          <width>89</width>
-          <height>16</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>加速度</string>
-        </property>
-       </widget>
        <widget class="QComboBox" name="cmb_earth">
         <property name="geometry">
          <rect>
@@ -687,14 +648,118 @@ QTabBar::tab:selected{background:#99CCFF;border-color: green;}</string>
        <widget class="QPushButton" name="btn_preview_earth">
         <property name="geometry">
          <rect>
-          <x>140</x>
-          <y>100</y>
+          <x>100</x>
+          <y>190</y>
           <width>75</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
          <string>预览</string>
+        </property>
+       </widget>
+       <widget class="QWidget" name="layoutWidget">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>80</y>
+          <width>221</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_6">
+         <item>
+          <widget class="QRadioButton" name="rbt_S">
+           <property name="text">
+            <string>位移</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="rbt_V">
+           <property name="text">
+            <string>速度</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="rbt_A">
+           <property name="text">
+            <string>加速度</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QLabel" name="label_10">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>120</y>
+          <width>61</width>
+          <height>16</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>采样周期：</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_11">
+        <property name="geometry">
+         <rect>
+          <x>30</x>
+          <y>150</y>
+          <width>61</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>采样点数：</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lab_earth_sample_T">
+        <property name="geometry">
+         <rect>
+          <x>110</x>
+          <y>120</y>
+          <width>61</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(147, 127, 137);</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_14">
+        <property name="geometry">
+         <rect>
+          <x>190</x>
+          <y>120</y>
+          <width>54</width>
+          <height>12</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>ms</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="lab_earth_sample_Cnt">
+        <property name="geometry">
+         <rect>
+          <x>110</x>
+          <y>150</y>
+          <width>61</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: rgb(243, 255, 225);</string>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </widget>
@@ -730,7 +795,7 @@ QTabBar::tab:selected{background:#99CCFF;border-color: green;}</string>
 QTabBar::tab:selected{background:#99CCFF;border-color: green;}</string>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_draw">
       <attribute name="title">
@@ -758,6 +823,75 @@ QTabBar::tab:selected{background:#99CCFF;border-color: green;}</string>
        <string>预览</string>
       </attribute>
      </widget>
+    </widget>
+   </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>710</y>
+      <width>311</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <widget class="QLabel" name="labeStatusl_3">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>301</width>
+       <height>30</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 75 12pt &quot;Agency FB&quot;;
+background-color: rgb(153, 204, 255);</string>
+     </property>
+     <property name="text">
+      <string>实时曲线参数</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+    </widget>
+    <widget class="QWidget" name="layoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>50</y>
+       <width>211</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_7">
+      <item>
+       <widget class="QRadioButton" name="rbt_S_plot">
+        <property name="text">
+         <string>位移</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="rbt_V_plot">
+        <property name="text">
+         <string>速度</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QRadioButton" name="rbt_A_plot">
+        <property name="text">
+         <string>加速度</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </widget>
    </widget>
   </widget>
